# ImCards

./: .gitignore  CMakeLists.txt  GetFlashCards.bat  ImCards.sln  Install.bat  LICENSE  README.md  Setup.bat
ImCards/: ImCards.vcxproj  ImCards.vcxproj.filters  Main.cpp
Source/: Main.cpp
